# solas

./: .gitmodules  CMakeLists.txt  CMakeSettings.json
dependencies/glad/include/glad/: gl.h
dependencies/glad/src/: gl.c
src/: main.c
src/engine/: ctor.c  engine.h  engine_settings.h  process_events.c
src/utility/: arena.c  arena.h  error_message.c  format.c  utility.h
